Fix overflow of navbar on mobile

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -126,6 +126,10 @@
     color: $musingsLightGrey;
   }
 
+  .date p {
+    text-align: left;
+  }
+
   .read-more {
     font-family: $futura;
     font-weight: $book;
@@ -144,7 +148,6 @@
 /* ------------------------------------------------------------------------- */
 
   .wrapper {
-    margin: 50px auto; /* the bottom margin is the negative value of the footer's height */    
     @media (min-device-width:768px) {
       li { margin-left:2em; }
     }
@@ -153,48 +156,58 @@
     }
   }
 
-  @media (max-device-width: 767px) {
+  @media (max-width: 767px) {
     iframe {
       max-width:100%;
       height:auto;
     }
-    .header-cover.section.bg-black.no-padding {
-    margin-left: -20px;
-    margin-right: -30px;
-    }
-    .btn.btn.navbar {
-      border:none;
-    }
   }
 
-  .mobile-ad {
+  .wrapper {
+  padding-left:20px;
+  padding-right:20px;
+    .mobile-ad {
     margin-left: -20px;
-    margin-right: -30px;
+    margin-right: -20px;
+    }
   }
 
   .no-wrap {
     white-space: nowrap;
   }
 
+  .navbar-sticky-top .container { width:940px; }
+
+  @media (min-width: 768px) and (max-width: 979px) {
+    .navbar-sticky-top .container { width:724px; }
+  }
+
+  @media (min-width: 1200px) {
+    .navbar-sticky-top .container { width:1170px; }
+  }
+
+  @media (max-width: 767px){body{padding-left:0px;padding-right:0px}.navbar-fixed-top,.navbar-fixed-bottom,.navbar-static-top{margin-left:0px;margin-right:0px}}
+
 /* ------------------------------------------------------------------------- */
 /*  Header Layout
 /* ------------------------------------------------------------------------- */
 
   @media only screen and (min-device-width: 768px) {
-    .section-inner{width:1040px;}
-    .blog-title, .blog-title a{font-size: 1.75em;}
-    .blog-info {padding:30px;}
+    .section-inner { width: 1040px; }
+    .blog-title, .blog-title a { font-size: 1.75em; }
+    .blog-info { padding: 1.3em; }
   }
 
   @media only screen and (max-device-width: 767px) {
-    .blog-title, .blog-title a{font-size: 1.5em;}
+    .blog-title, .blog-title a{ font-size: 1.5em; }
+    .blog-info { padding: 1.125em; }
     }
 
   .header.section{background-image:url('skyline.jpg');}
   .section { position: relative; }
-  .section{padding: 10% 0;}
+  .section{ padding: 10% 0;}
   .section.no-padding { padding: 0; }
-  .section.bg-black { background: black; }
+  .section.bg { background: #ccc; }
 
   .section-inner {
     max-width: 86%;
@@ -239,7 +252,6 @@
     text-align: center; 
     font-family: $futura;
     font-weight: $heavy;
-
   }
 
   .blog-title a {
@@ -284,8 +296,6 @@
     background: black;
     font-family: $futura;
     font-weight: $book;
-    width: 100%;
-
   }
 
   .navbar-inverse .nav > li > a {
@@ -315,18 +325,13 @@
     padding-right: 10px;
   }
 
-  .navbar-fixed-bottom,
-  .navbar-fixed-top {
-    position: relative;
-  }
+  .navbar-fixed-top { position: relative; }
+
+  .fix { position: fixed; }
 
   .dropdown .caret {
     vertical-align: middle;
     margin: 0px !important;
-  }
-
-  .fix {
-    position: fixed;
   }
 
 /* ------------------------------------------------------------------------- */
